--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.0",
     "react-toastify": "^10.0.5",
+    "react-use": "^17.5.0",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
