--- a/server/vercel.json
+++ b/server/vercel.json
@@ -5,7 +5,7 @@
         "use": "@vercel/node"
     }],
     "routes": [{
-        "src": "/(*)",
+        "src": "/(.*)",
         "dest": "src/main.ts",
         "methods": [
         "GET",
