--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,17 +1,15 @@
 {
     "version": 2,
-    "builds": [{
-        "src": "src/main.ts",
+    "builds": [
+      {
+        "src": "dist/src/main.js",
         "use": "@vercel/node"
-    }],
-    "routes": [{
+      }
+    ],
+    "routes": [
+      {
         "src": "/(.*)",
-        "dest": "src/main.ts",
-        "methods": [
-        "GET",
-        "POST",
-        "PUT",
-        "DELETE"
+        "dest": "dist/src/main.js"
+      }
     ]
-    }]
-}
+  }
