--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -27,8 +27,8 @@
       "@assets/*": [
         "./src/assets/*"
       ],
-      "@api/*": [
-        "./src/api/*"
+      "@services/*": [
+        "src/services/*"
       ],
       "@hooks/*": [
         "./src/hooks/*"
@@ -36,7 +36,7 @@
       "@store/*": [
         "./src/store/*"
       ],
-      "types/*": [
+      "@type/*": [
         "./src/types/*"
       ],
       "router/*": [
